# poulpy

./: .gitignore  AGENTS.md  AGENTS_backup.md  Cargo.toml  README.md  SESSION_17_NOTES.md  SESSION_18_NOTES.md  quick_lm_check.sh  run_30layer_d128.sh  sisyphus-fh1layer-128bit.service
fhe-llm/: Cargo.toml  README.md
fhe-llm/benches/: FHE_LLM_ops.rs
fhe-llm/docs/: noise_amplification_report.md
fhe-llm/examples/: compare_fhe_vs_exact.rs  create_toy_model.py  e2e_fhe_smollm2.rs  encrypted_lm_head_test.rs  error_char_100bit.rs  fhe_30layer_manual.rs  fhe_aggressive_bootstrap.rs  fhe_fp16_d32_frequent.rs  fhe_fp16_d64_frequent.rs  fhe_fp16_multi_layer_frequent.rs  fhe_fp16_single_layer.rs  fhe_fp16_single_layer_frequent.rs  fhe_fp64_single_layer.rs  fhe_full_30layer.rs  fhe_full_lm_head.rs  fhe_hidden_state_comparison.rs  lm_head_comparison.rs  noise_budget_audit.rs  plaintext_sweep.rs  prompt_attention_hybrid_isolation.rs  prompt_attention_probe.rs  prompt_attention_residual_bridge.rs  prompt_attention_score_compare.rs  prompt_attn_out_refresh_sweep.rs  prompt_calibrated_softmax_sweep.rs  prompt_coeff_support_replay_audit.rs  prompt_compare.rs  prompt_decode_sweep.rs  prompt_down_projection_range32_audit.rs  prompt_fhe_semantics_compare.rs  prompt_hidden_branch_range32_audit.rs  prompt_hidden_support_audit.rs  prompt_pre_attn_shift_sweep.rs  prompt_pre_ffn_mean_sq_remap_variants.rs  prompt_pre_ffn_norm_advanced.rs  prompt_pre_ffn_norm_output_variants.rs  prompt_pre_ffn_norm_sweep.rs  prompt_pre_ffn_poly_range_variants.rs  prompt_pre_ffn_range32_compare.rs  prompt_pre_ffn_refresh_branch_audit.rs  (+126 more)
fhe-llm/src/: activations.rs  arithmetic.rs  attention.rs  bootstrapping.rs  encoding.rs  encrypt.rs  inference.rs  layernorm.rs  lib.rs  lut.rs  model_loader.rs  moe.rs  noise.rs  params.rs  plaintext_forward.rs  tests.rs  transformer.rs  verification.rs
fhe-llm/tests/: refresh_extra.rs
poulpy-chimera/: Cargo.toml
poulpy-chimera/benches/: chimera_ops.rs
poulpy-chimera/src/: activations.rs  arithmetic.rs  attention.rs  bootstrapping.rs  encoding.rs  encrypt.rs  inference.rs  layernorm.rs  lib.rs  lut.rs  moe.rs  (+7 more)
(+44 files in other folders)
